# forsch-agent-social

./: DIRECTORY.md  README.md  pyproject.toml
src/forsch/agent_social/: __init__.py  agent.py
